# allfeat-sdk

./: .gitignore  CRUSH.md  Cargo.toml  README.md  flake.nix  justfile  my_ts_definitions.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
ats-cert-generator/: Cargo.toml  README.md  test.html
ats-cert-generator/assets/css/: colors.css
ats-cert-generator/src/: mod.rs  pdf.rs
ats-cert-parser/: Cargo.toml  README.md  package.json
ats-cert-parser/src/: lib.rs
ats-generate-proofs/: Cargo.toml
ats/zkp/: Cargo.toml  README.md
ats/zkp-wasm/: Cargo.toml  README.md  package.json
ats/zkp-wasm/js-example/: example.js  pk.js  vk.js
ats/zkp-wasm/src/: lib.rs
ats/zkp/src/: api.rs  circuit.rs  error.rs  hashing.rs  lib.rs  utils.rs  zkp.rs
ats/zkp/src/circuit/: mod.rs
client/: Cargo.toml  README.md
client/artifacts/: melodie_metadata.scale
client/src/: lib.rs  metrics.rs  midds.rs
client/src/js/: metrics.rs  mod.rs
client/src/js/tx/: mod.rs  system.rs
client/src/js/utils/: mod.rs
client/src/metadata/: mod.rs
core/: Cargo.toml
examples/client/: balance.ts  metrics.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/js/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/js/.papi/: polkadot-api.json
examples/js/.papi/descriptors/: package.json
examples/js/.papi/metadata/: melodie.scale
examples/remark-app/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
midds/: Cargo.toml  README.md
midds-v2/: Cargo.toml  README.md  music-genres.json
midds-v2/examples/: error_handling.rs
midds-v2/midds-v2-codegen/: Cargo.toml  README.md
midds-v2/midds-v2-codegen/src/: attribute.rs  enum_handler.rs  error.rs  generate.rs  lib.rs  struct_handler.rs  transform.rs
midds-v2/src/: benchmarking.rs  error.rs  lib.rs  mock_tests.rs  musical_work.rs  release.rs  track.rs  utils.rs
midds-v2/src/benchmarking/: midds_impls.rs  mod.rs
midds-v2/src/musical_work/: api.rs  error.rs  iswc.rs  mod.rs  runtime_api.rs  web_api.rs
midds-v2/src/recording/: mod.rs
midds-v2/src/release/: api.rs  ean.rs  error.rs  mod.rs  runtime_api.rs  web_api.rs
midds-v2/src/shared/: mod.rs
midds-v2/src/track/: api.rs  error.rs  isrc.rs  mod.rs  runtime_api.rs  web_api.rs
midds/midds-types-codegen/: Cargo.toml  README.md
midds/midds-types-codegen/src/: lib.rs
midds/src/: benchmarking.rs  lib.rs
midds/src/musical_work/: mod.rs  runtime.rs  types.rs
midds/src/party_identifier/: mod.rs  runtime.rs  types.rs
midds/src/release/: mod.rs  runtime.rs  types.rs
midds/src/shared/: conversion.rs  mod.rs  utils.rs
midds/src/track/: mod.rs  runtime.rs  types.rs
midds/tests/: midds_string_macro_tests.rs
primitives-macros/: Cargo.toml
primitives-macros/src/: lib.rs
src/: lib.rs  metrics.rs  midds.rs
src/metadata/: mod.rs
src/tx/: mod.rs  system.rs
src/utils/: sign.rs
wasm/: Cargo.toml
wasm-bindings/: Cargo.toml  README.md
wasm-bindings/src/: lib.rs
wasm/src/: lib.rs  metrics.rs
wasm/src/tx/: mod.rs  system.rs
