[workspace]
resolver = "3"
members = [
    "primitives-macros",
    "core",
    "wasm"
]

[workspace.dependencies]
# Allfeat
primitives-macros = { path = "./primitives-macros" }

# Polkadot-sdk interaction
parity-scale-codec = "3.7.5"

hex = "0.4.3"
serde = "1"
serde_json = "1"

async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
