[workspace]
resolver = "3"
members = [
    "ats/zkp",
    "ats/zkp-wasm",
    "client",
    "midds-v2",
]

[workspace.package]
edition = "2024"
authors = ["Allfeat labs. <hello@allfeat.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/Allfeat/allfeat-sdk"
homepage = "https://allfeat.org"
description = "Main cargo workspaces for Allfeat SDK tools."
readme = "README.md"

[workspace.dependencies]
# Allfeat
allfeat-client = { path = "./client", default-features = false }
allfeat-midds-v2 = { path = "./midds-v2" }
allfeat-ats-zkp = { path = "./ats/zkp" }
allfeat-ats-zkp-wasm = { path = "./ats/zkp-wasm" }

# Testing dependencies
tokio = { version = "1.0", features = ["full"] }
subxt-signer = "0.43"

# WASM
web-sys = "0.3"

serde = "1"
serde_json = "1"

async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
