[package]
name = "allfeat-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Client logic for the Allfeat SDK"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Substrate / Polkadot SDK
subxt = {  version = "0.43", default-features = false, features = ["jsonrpsee"] }

# Serialization
serde = { workspace = true }

# Async tools
async-trait = { workspace = true }

# WebAssembly bindings
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }

# JS utils
hex = { version = "0.4", optional = true }

[features]
default = [ "native" ]
native = [
  "subxt/native",
]
js = [
  "subxt/web",

  "wasm-bindgen",
  "wasm-bindgen-futures",
  "serde-wasm-bindgen",
  "console_error_panic_hook",
  "web-sys",
  "hex"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]
