[package]
name = "allfeat-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Client logic for the Allfeat SDK"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Allfeat
allfeat-midds-v2 = { path = "../midds-v2", version = "0.2.0", features = ["runtime"], default-features = false }

# Substrate / Polkadot SDK
subxt = {  version = "0.43", default-features = false, features = ["jsonrpsee"] }

# Serialization
serde = { workspace = true }

# Async tools
async-trait = { workspace = true }

[features]
default = [ "native" ]
native = [
  "subxt/native",
]
web = [
  "subxt/web",
]
