[package]
name = "allfeat-sdk-core"
version = "0.1.0"
edition = "2024"
authors = ["Allfeat labs. <hello@allfeat.com>"]
license = "MIT"
description = "Core logic for the Allfeat SDK (without wasm-bindgen)"
repository = "https://github.com/allfeat/allfeat-sdk"
homepage = "https://allfeat.org"

[lib]
crate-type = ["rlib"]

[dependencies]
# Substrate / Polkadot SDK
subxt = { version = "0.42.1", default-features = false }
subxt-signer = { version = "0.42.1", default-features = false }

# SCALE codec for binary encoding
parity-scale-codec = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = { workspace = true }

[features]
default = [ "subxt/native" ]
wasm = [
  "subxt-signer/web",
  "subxt/web",
  "subxt/jsonrpsee",
]
