[package]
name = "allfeat-midds-v2"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Substrate compatible MIDDS main crate."

[dependencies]
midds-v2-codegen = { path = "./midds-v2-codegen" }

frame-support = { version = "41.0.0", default-features = false }
frame-system = { version = "41.0.0", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

# Typescript bindings
ts-rs = "11"


[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]

