[package]
name = "allfeat-midds-v2"
version = "1.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Substrate compatible MIDDS main crate."

[dependencies]
midds-v2-codegen = { path = "./midds-v2-codegen", version = "0.2.0" }

frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.0", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

# Typescript bindings
ts-rs = { version = "11", optional = true }


[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "ts-rs"
]
runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]

