[package]
name = "allfeat-midds"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Substrate compatible MIDDS main crate."

[dependencies]
# Substrate
frame-support = { version = "40.1.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
] }

# WebAssembly bindings
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

js-sys = { version = "0.3.67", optional = true }
bomboni_wasm = { version = "0.1.64", optional = true, features = ["derive"] }

# Allfeat
allfeat-music-genres = { version = "0.2.5", default-features = false }
midds-types-codegen = { path = "./midds-types-codegen", version = "0.1.0" }

# For identifiers validation (std only)
regex = { version = "1", optional = true }

[features]
default = ["full-std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"regex",
]
full-std = [
    "std",
	"frame-support/std",
	"sp-runtime/std",
	"allfeat-music-genres/std",
]
js = [
  "std",
  "allfeat-music-genres/js",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "serde-wasm-bindgen",
  "console_error_panic_hook",
  "js-sys",
  "serde",
  "bomboni_wasm"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
]

[dev-dependencies]
# Dependencies needed for integration tests
regex = "1.11"

[package.metadata.wasm-pack.profile.release]
# FIXME: waiting for https://github.com/tinrab/bomboni/issues/2
wasm-opt = false
