[package]
name = "allfeat-wasm-bindings"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for Allfeat SDK - unified entry point for client and MIDDS"

[dependencies]
# Allfeat dependencies
allfeat-midds = { workspace = true, features = ["js"] }

# WebAssembly bindings
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Ensure we target wasm32 architecture
[lib]
crate-type = ["cdylib"]
