[package]
name = "allfeat-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Allfeat labs. <hello@allfeat.com>"]
license = "MIT"
description = "WebAssembly bindings for the Allfeat SDK, exposed to TypeScript"
repository = "https://github.com/allfeat/allfeat-sdk"
homepage = "https://allfeat.com"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

# Allfeat SDK Core logic
allfeat-sdk-core = { path = "../core", default-features = false, features = [ "wasm" ] }

# Utilities
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

subxt = { version = "0.42.1", features = ["web", "jsonrpsee"], default-features = false }
subxt-signer = { version = "0.42.1", features = ["web"], default-features = false }

parity-scale-codec = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]
