[package]
name = "allfeat-ats-zkp-wasm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Allfeat Time Stamp Song Commitment Circuit in Arkworks (BN254, Groth16 + Poseidon)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
allfeat-ats-zkp = { path = "../zkp" }
wasm-bindgen = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[package.metadata.wasm-pack.profile.release]
# Pass flags to wasm-opt
wasm-opt = ["-O", "--enable-bulk-memory"]

# (optional) for dev builds you can skip optimization entirely:
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
