[package]
name = "ats-zkp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Allfeat Time Stamp Song Commitment Circuit in Arkworks (BN254, Groth16 + Poseidon)"

[dependencies]
