[package]
name = "allfeat-ats-zkp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Allfeat Time Stamp Song Commitment Circuit in Arkworks (BN254, Groth16 + Poseidon)"

[dependencies]
ark-std = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
ark-r1cs-std = "0.5"
ark-crypto-primitives = { version = "0.5", default-features = false, features = ["sponge", "r1cs"] }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

[features]
default = ["std"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-bn254/std",
    "ark-relations/std",
    "ark-groth16/std",
    "ark-serialize/std",
    "ark-r1cs-std/std",
    "ark-crypto-primitives/std",
    "rand/std",
    "sha2/std",
]
