[package]
name = "allfeat-ats-zkp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Allfeat Time Stamp Song Commitment Circuit in Arkworks (BN254, Groth16 + Poseidon)"

[dependencies]
ark-std = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-relations = { version = "0.5", default-features = false }
ark-groth16 = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-r1cs-std = { version = "0.5", default-features = false }
ark-crypto-primitives = { version = "0.5", default-features = false, features = ["sponge", "r1cs"] }
hex = "0.4"
rand = { version = "0.8", default-features = false }
sha2 = { version = "0.10", default-features = false }
tempfile = "3.22"

[features]
default = ["std"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-bn254/std",
    "ark-relations/std",
    "ark-groth16/std",
    "ark-serialize/std",
    "ark-r1cs-std/std",
    "ark-crypto-primitives/std",
    "rand/std",
    "sha2/std",
]
